reports fixed overlapping reports by putting each on new row, patientDetails(odeme sayfasi): tedaviler and alinan paralar and odeme ekle done

--- a/src/screens/Reports/reports.scss
+++ b/src/screens/Reports/reports.scss
@@ -4,6 +4,10 @@
   justify-content: space-evenly;
 }
 
+.chartContainer {
+  max-width: 50%;
+}
+
 .chart {
   padding: 1rem;
 }
